some small changes

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "OSC_LISTEN_PORT": 8000,
   "OSC_SEND_HOST": "127.0.0.1",
   "OSC_SEND_PORT": 7001,
-  "MIDI_OUTPUT_NAME": "IAC Driver Bus 1",
+  "MIDI_OUTPUT_NAME": "Network Session 1",
   "MAPPINGS_CSV_PATH": "./mappings.csv"
 }
