--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -21,7 +21,7 @@ jobs:
             target_triple: x86_64-pc-windows-msvc
             exe_ext: .exe
           - os: macos
-            runner: macos-latest
+            runner: macos-13
             arch: x64
             arch_label: x86_64
             target_triple: x86_64-apple-darwin
@@ -58,6 +58,7 @@ jobs:
           sudo apt-get install -y \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
+            libsoup-3.0-dev \
             libssl-dev \
             libappindicator3-dev \
             librsvg2-dev \
@@ -84,8 +85,11 @@ jobs:
         run: bun install
         working-directory: tauri/odisc
 
+      - name: Set Rust target triple
+        run: echo "CARGO_BUILD_TARGET=${{ matrix.target_triple }}" >> $GITHUB_ENV
+
       - name: Build Tauri app
-        run: bun run tauri build
+        run: bun run tauri build --target ${{ matrix.target_triple }}
         working-directory: tauri/odisc
 
       - name: Upload Tauri build artifacts
