--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -92,20 +92,22 @@ jobs:
         run: bun run tauri build --target ${{ matrix.target_triple }}
         working-directory: tauri/odisc
 
+      - name: Collect distributables
+        run: |
+          mkdir -p dist-artifacts
+          # macOS
+          find tauri/odisc/ -type f -name "*.app" -exec cp -R {} dist-artifacts/ \;
+          find tauri/odisc/ -type f -name "*.dmg" -exec cp {} dist-artifacts/ \;
+          # Windows
+          find tauri/odisc/ -type f -name "*.msi" -exec cp {} dist-artifacts/ \;
+          find tauri/odisc/ -type f -name "*.exe" -exec cp {} dist-artifacts/ \;
+          # (Optional) Linux
+          find tauri/odisc/ -type f -name "*.deb" -exec cp {} dist-artifacts/ \;
+          find tauri/odisc/ -type f -name "*.AppImage" -exec cp {} dist-artifacts/ \;
+        shell: bash
+      
       - name: Upload Tauri distributable artifacts
         uses: actions/upload-artifact@v4
         with:
           name: tauri-build-${{ matrix.os }}-${{ matrix.arch }}
-          path: |
-            # macOS .app and .dmg
-            tauri/odisc/src-tauri/target/**/bundle/macos/*.app
-            tauri/odisc/src-tauri/target/**/bundle/dmg/*.dmg
-            tauri/odisc/target/**/bundle/macos/*.app
-            tauri/odisc/target/**/bundle/dmg/*.dmg
-            # Windows .msi, .exe (NSIS), and .exe (bundle)
-            tauri/odisc/src-tauri/target/**/bundle/msi/*.msi
-            tauri/odisc/src-tauri/target/**/bundle/nsis/*.exe
-            tauri/odisc/src-tauri/target/**/bundle/windows/*.exe
-            tauri/odisc/target/**/bundle/msi/*.msi
-            tauri/odisc/target/**/bundle/nsis/*.exe
-            tauri/odisc/target/**/bundle/windows/*.exe
+          path: dist-artifacts/*
