--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,4 @@ regex = "1.11.1"
 rosc = "0.11.4"
 tokio = { version = "1.47.0", features = ["full"] }
 once_cell = "1.21.3"
+lazy_static = "1.4.0"
