--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,4 @@ rosc = "0.11.4"
 tokio = { version = "1.47.0", features = ["full"] }
 once_cell = "1.21.3"
 lazy_static = "1.4.0"
+smallvec = "1.15.1"
